modified:   HW_4.ipynb

--- a/HW_4.ipynb
+++ b/HW_4.ipynb
@@ -9,6 +9,15 @@
     "git config --global user.email \"borovkov-pavel@yandex.ru\"\n",
     "git config --global user.name \"Xbostick\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaa"
+   ]
   }
  ],
  "metadata": {
